--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -51,7 +51,7 @@
 
 \begin{abstract}
     In light of growing AI adoption, concerns about potential discrimination have emerged. This study introduces a set of "fair-by-design" methodologies, which systematically embed fairness principles into AI systems. These techniques, primarily relying on established Python libraries and customized toolsets, focus on mitigating bias in AI predictions.\\
-    The research commenced with an exploration of pre-processing fairness techniques. To evaluate their efficacy, a real-world education dataset from the Canary Islands has been used. Comparative analysis was conducted between predictions generated using fair-by-design methods and those produced without fairness considerations. The results highlight the substantial impact of proactive fairness integration in system design.
+    The research commenced with an exploration of various fairness techniques. To evaluate their efficacy, a real-world education dataset from the Canary Islands has been used. Comparative analysis was conducted between predictions generated using fair-by-design methods and those produced without fairness considerations. The results highlight the substantial impact of proactive fairness integration in system design.
     Amid broader discussions concerning the ethical implications of AI, these fair-by-design methods offer a dispassionate approach to promoting equitable AI system performance, minimizing bias, and fostering responsible AI use.
 \end{abstract}
 
@@ -73,12 +73,18 @@ Never too far down, to come back
 \label{chap:introduction}
 %----------------------------------------------------------------------------------------
 
-In recent years, there has been a notable increase in the utilization of artificial intelligence (AI) systems across various sectors. This rise is attributed to advancements in technology, the accessibility of extensive data, and heightened computational capabilities. AI has transcended its role as a mere performance enhancer and has begun exerting a profound impact on social contexts. These systems are now pervasive in healthcare, education, criminal justice, and other crucial domains, fundamentally reshaping decision-making processes and societal interactions. However, the reliance of AI systems on data for learning and decision-making implies that they inherit the biases embedded in these data. This inherent bias has the potential to perpetuate existing societal imbalances and prejudices. Addressing bias and ensuring fairness in AI algorithms is hence a pressing concern, necessitating continuous research, responsible development practices, and vigilant oversight to guarantee equitable outcomes for all. In this discussion, there will be a deep inspection into the intricate dynamics of biases and fairness in AI systems, exploring viable strategies to effectively mitigate these challenges.
+In recent years, there has been a notable increase in the utilization of artificial intelligence (AI) systems across various sectors. This rise is attributed to advancements in technology, the accessibility of extensive data, and heightened computational capabilities. \\
+AI has transcended its role as a mere performance enhancer and has begun exerting a profound impact on social contexts. These systems are now pervasive in healthcare, education, criminal justice, and other crucial domains, fundamentally reshaping decision-making processes and societal interactions. However, the reliance of AI systems on data for learning and decision-making implies that they inherit the biases embedded in these data. This inherent bias has the potential to perpetuate existing societal imbalances and prejudices. \\
+Addressing bias and ensuring fairness in AI algorithms is hence a pressing concern, necessitating continuous research, responsible development practices, and vigilant oversight to guarantee equitable outcomes for all. \\ 
+In this discussion, there will be a deep inspection into the intricate dynamics of biases and fairness in AI systems, exploring viable strategies to effectively mitigate these challenges.
 
 \paragraph{Artificial Intelligence}
-In recent years, artificial intelligence (AI) has undergone a remarkable evolution, transforming from a theoretical concept to a pervasive force shaping various facets of our lives. Advances in machine learning, particularly deep learning, have fueled this growth, enabling AI systems to process vast amounts of data and extract meaningful insights. Notably, breakthroughs in natural language processing have led to more conversational AI, making interactions with machines increasingly human-like. Moreover, AI applications have expanded across sectors, encompassing healthcare, finance, transportation, and more. However, ethical considerations and the responsible development of AI have gained significant traction, prompting discussions on privacy, bias mitigation, and ensuring that AI benefits all of society. The future of AI promises continued innovation, fostering a symbiotic relationship between humans and machines for a more technologically enriched world. \cite{10.1145/3457607}
+In recent years, artificial intelligence (AI) has undergone a remarkable evolution, transforming from a theoretical concept to a pervasive force shaping various facets of our lives. Advances in machine learning, particularly deep learning, have fueled this growth, enabling AI systems to process vast amounts of data and extract meaningful insights. 
+Notably, breakthroughs in natural language processing have led to more conversational AI, making interactions with machines increasingly human-like. Moreover, AI applications have expanded across sectors, encompassing healthcare, finance, transportation, and more. \\
+However, ethical considerations and the responsible development of AI have gained significant traction, prompting discussions on privacy, bias mitigation, and ensuring that AI benefits all of society. The future of AI promises continued innovation, fostering a symbiotic relationship between humans and machines for a more technologically enriched world. \cite{10.1145/3457607}
 \paragraph{Bias}
-In the realm of artificial intelligence, the issue of bias is a critical concern. AI systems are trained on historical data, and if this data carries biases related to gender, race, or other factors, the AI can inadvertently perpetuate and amplify these biases in its predictions or decisions. Addressing bias in AI necessitates a proactive approach, from carefully curating training data to developing algorithms that are designed to detect and mitigate bias. Furthermore, promoting diversity and inclusivity in the development teams is vital to ensuring that biases are recognized and addressed effectively. \cite{10.1145/3457607}
+In the realm of artificial intelligence, the issue of bias is a critical concern. AI systems are trained on historical data, and if this data carries biases related to gender, race, or other factors, the AI can inadvertently perpetuate and amplify these biases in its predictions or decisions. \\
+Addressing bias in AI necessitates a proactive approach, from carefully curating training data to developing algorithms that are designed to detect and mitigate bias. Furthermore, promoting diversity and inclusivity in the development teams is vital to ensuring that biases are recognized and addressed effectively. \cite{10.1145/3457607}
 \paragraph{Fairness}
 Ensuring fairness in AI is an ongoing and essential goal. It involves designing and implementing AI systems in a way that does not discriminate against individuals or groups based on characteristics like race, gender, or socioeconomic status. Achieving fairness demands a multidimensional approach, including a clear definition of fairness metrics, active involvement of diverse stakeholders, and regular audits of AI systems to detect and rectify any unfair biases. Additionally, incorporating transparency and accountability into the AI development process is crucial for building trust and ensuring fair outcomes for all users. \cite{10.1145/3457607} \cite{10.1145/3194770.3194776}
 \paragraph{Machine Learning and data}
